--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --hover: var(--color-blue-600)
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-hover-color: var(--hover);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
